increased the z-index of contribute's dropdown to prevent overlap

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ ul#nav {
 }
   
 .dropdown {
+    z-index: 2;
     position: relative;
     display: inline-block;
 }
